Fixes per CR; fix tester project builds by moving from build.sbt to Build.scala

--- a/sbt-deploy/sbt-deploy-tester/conf/deploy.conf
+++ b/sbt-deploy/sbt-deploy-tester/conf/deploy.conf
@@ -3,8 +3,10 @@ base = {
   deploy.host = "localhost"
   deploy.directory = "/local/deploy/sbt-deploy-tester"
   deploy.startup_script = "bin/test.sh"
-  deploy.user.ssh_username = "ec2-user"
-  deploy.user.ssh_username = "markschaake"
+  # for testing, set to local user account. Note you must have
+  # ssh server running on your local machine. On Mac, you can do
+  # this via System Preferences -> Sharing, enable Remote Login
+  #deploy.user.ssh_username = ""
 }
 
 staging = ${base}
