Update global config example to reflect changes.

--- a/src/main/resources/global_deploy.conf
+++ b/src/main/resources/global_deploy.conf
@@ -15,12 +15,9 @@ project = {
   version = null
 }
 deploy = {
-  // Hostname to push to. Required.
+  // Hostname to push to. Required if 'replicas' not set.
   host = null
-  // Directory on the remote host to push to. Required.
-  directory = "/local/deploy/"${?project.name}
-  // Start / stop script to run after the push is complete. Required.
-  startup_script = "bin/"${?project.name}".sh"
+  // User data for the host above. Required if 'host' is set.
   user = {
     // Full path to the ssh keypair to use when connecting to the remote host.
     // Required.
@@ -28,4 +25,20 @@ deploy = {
     // Username to connect to the remote host as. Required.
     ssh_username = "ec2-user"
   }
+  // Directory on the remote host to push to. Required.
+  directory = "/local/deploy/"${?project.name}
+  // Start / stop script to run after the push is complete. Required.
+  startup_script = "bin/"${?project.name}".sh"
+  // Optional arguments to pass to the startup script. Forbidden if 'host' is not set.
+  startup_args = []
+  // An array of objects describing replicas to push to. Required if 'host' not set.
+  // Objects take the form
+  // {
+  //   // Required.
+  //   host = null
+  //   user = { ssh_keyfile = null, ssh_username = null }
+  //   // Optional.
+  //   startup_args = []
+  // }
+  replicas = null
 }
