--- a/src/main/resources/global_deploy.conf
+++ b/src/main/resources/global_deploy.conf
@@ -15,9 +15,7 @@ project = {
   version = null
 }
 deploy = {
-  // Hostname to push to. Required if 'replicas' not set, forbidden if 'replicas' is set.
-  host = null
-  // User data for the host above. Required if 'host' is set.
+  // User data to use during deployment. Required.
   user = {
     // Full path to the ssh keypair to use when connecting to the remote host.
     // Required.
@@ -29,17 +27,20 @@ deploy = {
   directory = "/local/deploy/"${?project.name}
   // Start / stop script to run after the push is complete. Required.
   startup_script = "bin/"${?project.name}".sh"
+
+  // Hostname to push to. Required if 'replicas' not set, forbidden if 'replicas' is set.
+  host = null
   // An array of objects describing replicas to push to. Required if 'host' not set, forbidden
   // if 'host' is set.
   // Objects take the form
   // {
   //   // Required.
   //   host = null
-  //   user = { ssh_keyfile = null, ssh_username = null }
   //   // Optional. Only applies to this replica.
   //   config_overrides = {}
   // }
   replicas = null
+
   // Optional configuration overrides to apply to the 'application.conf' files of all replicas
   // on deploy.
   config_overrides = {}
