--- a/src/sbt-test/sbt-plugins/simple/webservice/conf/deploy.conf
+++ b/src/sbt-test/sbt-plugins/simple/webservice/conf/deploy.conf
@@ -1,6 +1,6 @@
 test.deploy {
-  host = "replicas"
-  directory = "/tmp"
+  host = "localhost"
+  directory = "/var/deploy/webservice"
   user.ssh_username = "plugin-tester"
   startup_script = "bin/webservice.sh"
 }
