typo and fix ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,4 +43,4 @@ jobs:
       # check formatting
       - run: cat /dev/null | sbt scalafmtCheckAll
       # run tests
-      - run: cat /dev/null | sbt test
+      - run: cat /dev/null | sbt ^test
